@@ -10,7 +10,7 @@
       "item": "minecraft:fire_charge"
     },
     "p": {
-      "item": "overpowered:nullified_power_core"
+      "item": "overpowered:plasma"
     }
   },
   "result": {
