@@ -1,0 +1,10 @@
+{
+  "type": "minecraft:crafting_shapeless",
+  "ingredients": [
+    {"item": "overpowered:beam_emitter"},
+    {"item": "addsynth_energy:circuit_tier_2"}
+  ],
+  "result": {
+    "item": "overpowered:scanning_laser"
+  }
+}
